# crewAI_newsAgent

./: pyproject.toml
backend/: README.md  main.py  news_report.md  pyproject.toml
backend/YoutubeAgent/: agent.py
backend/YoutubeAgent/config/: agents.yaml  tasks.yaml
backend/YoutubeAgent/tools/: transcript.py
frontend/YoutubeAgent/: index.html  package-lock.json  package.json
frontend/YoutubeAgent/src/: App.css  App.tsx  index.css
frontend/YoutubeAgent/src/pages/: search.css  search.tsx
newsAgent/: main.py  news_report.md  timecheck.py
